# fiction-fabricator

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Evaluate.py  GEMINI.md  LICENSE  LICENSE.md  README.md  Todo.md  Write.py  app.py  books.db  classes.py  codegrab-output.md  config.ini  config.py  content_generator.patch  context.json  embedding_manager.py  example_lorebook.json  fiction_fabricator.py  flake.nix  main.py  menu.py  package-lock.json  package.json  plan.py  prompt.txt  prompt_constructor.py  prompt_manager.patch  prompts.py  pyproject.toml  readme.md  requirements.txt  run  scratch  setup-env.sh  shell.nix  storytelling_agent.py  (+13 more)
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.github/: README.md  code2prompt.txt  coderai_prompt.txt  copilot-instructions.md  prompt_scrap.txt
.streamlit/: config.toml
Premises/: A_man_learns_the_hard_way_to_read_the_fine_print_when_the_paid_drug_trials_he_signs_up_for_transform_him_into_a_female.txt
Tools/: PremiseGenerator.py  PromptGenerator.py  ShortStoryWriter.py  Test.py  WebNovelChapterWriter.py
Writer/: Config.py  CritiqueRevision.py  LLMEditor.py  LLMUtils.py  Models.py  NarrativeContext.py  NovelEditor.py  OutlineGenerator.py  PrintUtils.py  Prompts.py  Scrubber.py  Statistics.py  StoryInfo.py  SummarizationUtils.py  Translator.py
assets/: styles.css
core/: book_spec.py  content_generator.py  content_generator.py.orig  content_generator.py.rej  output_formatter.py  plot_outline.py  project_manager.py  project_manager.py.orig
data/: cam girlo.json  shroom.json
llm/: __init__.py  langchain_client.py  llm_client.py  prompt_manager.py  prompt_manager.py.orig  prompt_manager.py.rej
prompt_templates/: find_book_description_prompt.txt  find_book_title_system_message.txt  write_chapter.txt  write_chapter_line.txt  write_chapter_summary.txt  write_chapteroutline.txt  write_chapteroutline_system_message.txt  write_chapters_system_message.txt  write_chaptersummary_system_message.txt  write_toc_system_message.txt
source/: chain.py  openaiconnection.py  prompttemplate.py  tokencounter.py  writelogs.py
src/: __init__.py  anthropic_client.py  async_file_utils.py  base.py  batch_generator.py  book_setup.py  chapter.py  chapter_selector.py  chapters.py  character.py  characters.py  circuit_breaker.py  config.py  content_enhancements.py  continuity_manager.py  create_project.py  database.py  engagement_optimizer.py  exceptions.py  export.py  export_manager.py  (+36 more)
(+196 files in other folders)
